syntax = "proto3";
option java_package = "com.moviecatalogservice.proto";

service TrendingMovies {
  rpc GetTopTenMovies (Empty) returns (GetTopTenMoviesReply) {}
}

message GetTopTenMoviesReply {
  repeated MovieRating movieRatings = 1;
}

message Empty {
}

message MovieRating {
  string movieId = 1;
  float rating = 2;
}
